--- a/src/app/home/reset-password/reset-password-password/reset-password-password.component.scss
+++ b/src/app/home/reset-password/reset-password-password/reset-password-password.component.scss
@@ -165,18 +165,42 @@ $module-color:#253741;
     width: 100%;
     font-size: 1rem;
     border: none;
-    border-bottom: 2px solid $module-color;
+    border-radius: none;
     background-color: transparent;
     color: $dark-text;
     transition: border-color 0.3s;
+
     &:focus {
       outline: none;
-      border-bottom: 2px solid $module-color;
+      border-bottom: 1px solid $module-color;
     }
-    .p-element {
+
+    input{
       width: 100%;
-      border: none;
+      padding-left: 30px;
+      border-bottom: 2px solid $module-color;
+
     }
+
+
+    .pi {
+      position: absolute;
+      left: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 1rem;
+      z-index: 1;
+      color: $dark-text;
+    }
+    i {
+      position: absolute;
+      z-index: 1;
+      padding: 5px;
+      color: #000;
+      top: 10px;
+      left: 8px;
+    }
+
   }
 }
 
