--- a/src/app/home/reset-password/reset-password.component.html
+++ b/src/app/home/reset-password/reset-password.component.html
@@ -38,7 +38,7 @@
       }}
     </small>
     <span class="button-style mt-4">
-      <button pButton class="button" (click)="deneme()">
+      <button pButton class="button" (click)="sendCode()">
         {{ "resetForm.buttonLabelNew" | transloco }}
       </button>
     </span>
