--- a/src/app/home/reset-password/reset-password.component.scss
+++ b/src/app/home/reset-password/reset-password.component.scss
@@ -2,8 +2,11 @@ $primary-color: #3498db;
 $secondary-color: #1071b3;
 $danger-color: #e74c3c;
 $dark-text: #34495e;
+$light-text-second: #c0ddfb;
 $light-text: #ecf0f1;
+$light-text-hover: #91c9d7;
 $background-color: #ecf0f1;
+$module-color:#253741;
 
 .container {
   display: flex;
@@ -38,14 +41,14 @@ $background-color: #ecf0f1;
           padding-left: 40px;
           font-size: 1rem;
           border: none;
-          border-bottom: 2px solid $primary-color;
+          border-bottom: 2px solid $module-color;
           background-color: transparent;
           color: $dark-text;
           transition: border-color 0.3s;
 
           &:focus {
             outline: none;
-            border-bottom: 2px solid $secondary-color;
+            border-bottom: 2px solid $module-color;
           }
         }
 
@@ -90,7 +93,7 @@ $background-color: #ecf0f1;
           margin-top: 15px;
           justify-content: center;
           align-items: center;
-          background-color: $primary-color;
+          background-color: $module-color;
           color: $light-text;
           font-size: 1rem;
           border: none;
@@ -99,7 +102,7 @@ $background-color: #ecf0f1;
           transition: background-color 0.3s;
 
           &:hover {
-            background-color: $secondary-color;
+            background-color: $module-color;
           }
         }
       }
@@ -115,7 +118,7 @@ $background-color: #ecf0f1;
 
       a {
         text-decoration: none;
-        color: $primary-color;
+        color: $module-color;
         cursor: pointer;
 
         &:hover {
@@ -136,7 +139,7 @@ $background-color: #ecf0f1;
 
       a {
         text-decoration: none;
-        color: $primary-color;
+        color: $module-color;
         cursor: pointer;
 
         &:hover {
@@ -162,13 +165,13 @@ $background-color: #ecf0f1;
     width: 100%;
     font-size: 1rem;
     border: none;
-    border-bottom: 2px solid $primary-color;
+    border-bottom: 2px solid $module-color;
     background-color: transparent;
     color: $dark-text;
     transition: border-color 0.3s;
     &:focus {
       outline: none;
-      border-bottom: 2px solid $secondary-color;
+      border-bottom: 2px solid $module-color;
     }
     .p-element {
       width: 100%;
