--- a/src/app/home/reset-password/resetpassword-code/resetpassword-code.component.html
+++ b/src/app/home/reset-password/resetpassword-code/resetpassword-code.component.html
@@ -15,9 +15,9 @@
       />
       <label htmlFor="code">{{'codeForm.code' | transloco}}</label>
     </span>
-  
+
     <span class="button-style mt-4">
-      <button pButton class="button">
+      <button pButton class="button" (click)="verifyCode()">
        {{'codeForm.approve' | transloco}}
       </button>
     </span>
@@ -25,7 +25,7 @@
       <button
         pButton
         class="button custom-button"
-        routerLink="/reset-password"
+        [routerLink]="['/reset-password']"
       >
         {{ "resetForm.buttonLabelBack" | transloco }}
       </button>
