--- a/src/app/home/login/login.component.scss
+++ b/src/app/home/login/login.component.scss
@@ -2,8 +2,11 @@ $primary-color: #3498db;
 $secondary-color: #1071b3;
 $danger-color: #e74c3c;
 $dark-text: #34495e;
+$light-text-second: #c0ddfb;
 $light-text: #ecf0f1;
+$light-text-hover: #91c9d7;
 $background-color: #ecf0f1;
+$module-color:#253741;
 
 .container {
   display: flex;
@@ -15,14 +18,14 @@ $background-color: #ecf0f1;
   form {
     width: 100%;
     max-width: 600px;
-    background-color: #fff;
+    background-color: $background-color;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 
     h2 {
       text-align: center;
-      color: $dark-text;
+      color: $module-color;
       margin-bottom: 20px;
     }
 
@@ -36,14 +39,14 @@ $background-color: #ecf0f1;
         padding-left: 40px;
         font-size: 1rem;
         border: none;
-        border-bottom: 2px solid $primary-color;
+        border-bottom: 2px solid $dark-text;
         background-color: transparent;
         color: $dark-text;
         transition: border-color 0.3s;
 
         &:focus {
           outline: none;
-          border-bottom: 2px solid $secondary-color;
+          border-bottom: 2px solid $module-color;
         }
       }
 
@@ -94,7 +97,7 @@ $background-color: #ecf0f1;
 
       a {
         text-decoration: none;
-        color: $primary-color;
+        color: $module-color;
         cursor: pointer;
 
         &:hover {
@@ -110,7 +113,7 @@ $background-color: #ecf0f1;
       button {
         width: 100%;
         padding: 15px;
-        background-color: $primary-color;
+        background-color: $module-color;
         justify-content: center;
         color: $light-text;
         font-size: 1rem;
@@ -120,7 +123,7 @@ $background-color: #ecf0f1;
         transition: background-color 0.3s;
 
         &:hover {
-          background-color: $secondary-color;
+          background-color: $module-color;
         }
       }
     }
@@ -138,7 +141,7 @@ $background-color: #ecf0f1;
 
       a {
         text-decoration: none;
-        color: $primary-color;
+        color: $module-color;
         cursor: pointer;
 
         &:hover {
@@ -154,7 +157,7 @@ $background-color: #ecf0f1;
       }
       a{
         text-decoration: none;
-        color: #3498db;
+        color: $module-color;
         font-size: 13px;
       }
     }
@@ -180,14 +183,14 @@ $background-color: #ecf0f1;
     cursor: pointer;
     padding: 15px;
     border: none;
-    border-bottom: 2px solid $primary-color;
+    border-bottom: 2px solid $module-color;
     background-color: transparent;
     padding-left: 35px;
     color: $dark-text;
     transition: border-color 0.3s;
     &:focus {
       outline: none;
-      border-bottom: 2px solid $secondary-color;
+      border-bottom: 2px solid $module-color;
     }
 
 
