--- a/src/app/dashboard/components/product-management/get-product/get-product.component.scss
+++ b/src/app/dashboard/components/product-management/get-product/get-product.component.scss
@@ -4,15 +4,7 @@ $danger-color: #e74c3c;
 $dark-text: #34495e;
 $light-text: #ecf0f1;
 $background-color: #ecf0f1;
-:host ::ng-deep{
-  .table{
-    width: 90%;
 
-    button{
-      background-color: $primary-color;
-    }
-  }
-}
 /* product-table.scss */
 
 .container {
@@ -23,10 +15,11 @@ $background-color: #ecf0f1;
   width: auto;
 }
 .category-filter{
-  width: auto;
+  width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
+  justify-content: start;
 
   .title{
     border: none;
@@ -34,23 +27,11 @@ $background-color: #ecf0f1;
     justify-content: start;
   }
 
-  div{
-    border-radius: 5px;
-    height: 50px;
+  select{
+    margin-right: 15px;
+    width: 220px;
+    height: 30px;
     cursor: pointer;
-    display: flex;
-    width: 150px;
-    background-color: #fff;
-    margin: 15px;
-    color: #555;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    border:0.5px solid #555;
-
-    &:hover {
-      border-color:$dark-text;
-    }
   }
 }
 .card {
@@ -77,7 +58,6 @@ $background-color: #ecf0f1;
   th, td {
     text-align: center;
     padding: 10px;
-    width: 100px;
   }
 
   img {
@@ -112,7 +92,6 @@ $background-color: #ecf0f1;
 
   td,th{
     justify-content: center;
-    width: 100px;
   }
 
   .button{
@@ -124,5 +103,22 @@ $background-color: #ecf0f1;
 
   .p-tag-value{
     width: 60px;
+  }
+
+  .p-paginator{
+    .p-icon{
+      color: $dark-text;
+    }
+  }
+
+  .p-icon{
+    color: RGB(255,170,74);
+  }
+}
+
+/* Responsive Tasarım */
+@media screen and (max-width: 768px) {
+  .category-filter {
+    flex-direction: column; /* Ekran genişliği 768 piksele düştüğünde sütun düzenine geç */
   }
 }
