stock status control added

--- a/src/app/dashboard/components/product-management/update-product/update-product.component.html
+++ b/src/app/dashboard/components/product-management/update-product/update-product.component.html
@@ -131,7 +131,7 @@
     <!-- button start-->
     <div class="wrapper w-full justify-content-center mt-4">
       <span class="button-style mt-4">
-        <button class="button w-12rem" >{{'dUpdateProduct.update' | transloco}}</button>
+        <button class="button w-12rem" (click)="updateProduct()">{{'dUpdateProduct.update' | transloco}}</button>
       </span>
     </div>
     <!-- button end-->
