--- a/src/app/pages/components/product/card/card.component.html
+++ b/src/app/pages/components/product/card/card.component.html
@@ -20,13 +20,10 @@
         {{ "cardForm.Fitness" | transloco }}
       </div>
       <div (click)="getProductByFilter('Man')">
-        {{ "cardForm.Man" | transloco }}
+        {{ "Male" | transloco }}
       </div>
       <div (click)="getProductByFilter('Women')">
-        {{ "cardForm.Women" | transloco }}
-      </div>
-      <div (click)="getProductByFilter('Children')">
-        {{ "cardForm.Children" | transloco }}
+        {{ "Female" | transloco }}
       </div>
     </div>
   </div>
