--- a/src/app/home/login/login.component.scss
+++ b/src/app/home/login/login.component.scss
@@ -6,14 +6,13 @@ $light-text-second: #c0ddfb;
 $light-text: #ecf0f1;
 $light-text-hover: #91c9d7;
 $background-color: #ecf0f1;
-$module-color:#253741;
+$module-color: #253741;
 
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   max-height: 100vh;
-
 
   form {
     width: 100%;
@@ -33,7 +32,7 @@ $module-color:#253741;
       position: relative;
       margin-top: 20px;
       width: 100%;
-      input{
+      input {
         width: 100%;
         padding: 15px;
         padding-left: 40px;
@@ -65,8 +64,7 @@ $module-color:#253741;
         color: $dark-text;
       }
 
-
-      i{
+      i {
         position: absolute;
         z-index: 1;
         padding: 5px;
@@ -125,6 +123,23 @@ $module-color:#253741;
         &:hover {
           background-color: $module-color;
         }
+
+        i {
+          margin-right: 8px;
+          font-size: 11px;
+          background: conic-gradient(
+              from -45deg,
+              #ea4335 110deg,
+              #4285f4 90deg 180deg,
+              #34a853 180deg 270deg,
+              #fbbc05 270deg
+            )
+            73% 55%/150% 150% no-repeat;
+          -webkit-background-clip: text;
+          background-clip: text;
+          color: transparent;
+          -webkit-text-fill-color: transparent;
+        }
       }
     }
 
@@ -149,50 +164,48 @@ $module-color:#253741;
         }
       }
     }
-    .social{
-      .pi{
+    .social {
+      .pi {
         position: relative;
         justify-content: center;
         text-align: center;
       }
-      a{
+      a {
         text-decoration: none;
         color: $module-color;
         font-size: 13px;
       }
     }
-}
+  }
 
-@media (max-width: 768px) {
-  .container {
-    form {
-      max-width: 100%;
+  @media (max-width: 768px) {
+    .container {
+      form {
+        max-width: 100%;
+      }
     }
   }
-}
-
 }
 
 :host ::ng-deep {
   .password.p-password {
     width: 100%;
-    input{
-    position: relative;
-    width: 100%;
-    font-size: 1rem;
-    cursor: pointer;
-    padding: 15px;
-    border: none;
-    border-bottom: 2px solid $module-color;
-    background-color: transparent;
-    padding-left: 35px;
-    color: $dark-text;
-    transition: border-color 0.3s;
-    &:focus {
-      outline: none;
+    input {
+      position: relative;
+      width: 100%;
+      font-size: 1rem;
+      cursor: pointer;
+      padding: 15px;
+      border: none;
       border-bottom: 2px solid $module-color;
-    }
-
+      background-color: transparent;
+      padding-left: 35px;
+      color: $dark-text;
+      transition: border-color 0.3s;
+      &:focus {
+        outline: none;
+        border-bottom: 2px solid $module-color;
+      }
 
       .pi {
         position: absolute;
@@ -210,8 +223,6 @@ $module-color:#253741;
         top: 10px;
         left: 8px;
       }
-
     }
-
   }
 }
