category label fixed

--- a/src/app/dashboard/components/product-management/get-product/get-product.component.html
+++ b/src/app/dashboard/components/product-management/get-product/get-product.component.html
@@ -132,9 +132,8 @@
             ></p-tag>
           </td>
           <td>
-            {{
-              product?.category.name| categoryStatus
-            }}
+            {{ product?.category | categoryStatus }}
+
           </td>
           <td>{{ product?.companyName  }}</td>
           <td>
