--- a/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.html
+++ b/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.html
@@ -106,10 +106,10 @@
      <div class="wrapper block w-full">
       <div class="flex-auto mt-4">
         <label for="valueRating" class="mb-2 block">{{'dAddProduct.category' | transloco}}</label>
-        <select formControlName="category">
+        <select formControlName="category" (change)="onCategoryChange($event)">
           <option value="" disabled selected hidden>{{'dAddProduct.category' | transloco}}</option>
-          <option *ngFor="let category of categorys" [value]="category">
-            {{ category.name | transloco}}
+          <option *ngFor="let category of categorys" [ngValue]="category.name">
+            {{ category.name }}
           </option>
         </select>
       </div>
@@ -120,11 +120,10 @@
     <div class="flex-auto mt-4">
       <div class="flex flex-column justify-content-center border-round">
         <label for="valueRating" class="mb-2 block">{{'dAddProduct.rating' | transloco}}</label>
-
         <select formControlName="valueRating">
-          <option value="" disabled selected hidden>{{'dAddProduct.rating' | transloco}}</option>
-          <option *ngFor="let item of items" [value]="item">
-            {{ item.value | transloco}}
+          <option value="" disabled selected hidden>{{ 'dAddProduct.rating' | transloco }}</option>
+          <option *ngFor="let item of items" [value]="item.value">
+            {{ item.value | transloco }}
           </option>
         </select>
       </div>
